src/objects/ProgressNote_ServiceAssignment_mJO__c.object
<CustomObject>
    <description>NOTES Records the relationship between one Progress Note, Short-term Goals, Objectives and Interventions.</description>
    <fields>
        <fullName>Intervention__c</fullName>
        <deleteConstraint>Cascade</deleteConstraint>
        <label>Intervention</label>
        <referenceTo>Intervention__c</referenceTo>
        <relationshipName>Progress_Note_Short_term_Goals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Objective__c</fullName>
        <deleteConstraint>Cascade</deleteConstraint>
        <label>Objective</label>
        <referenceTo>Objective__c</referenceTo>
        <relationshipName>Progress_Note_Short_term_Goals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Progress_Note__c</fullName>
        <label>Progress Note</label>
        <referenceTo>Progress_Note__c</referenceTo>
        <relationshipName>Progress_Note_Goal_Junctions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Short_Term_Goal__c</fullName>
        <deleteConstraint>Cascade</deleteConstraint>
        <description>The short-term goal for which progress was noted</description>
        <inlineHelpText>The short-term goal for which progress was noted</inlineHelpText>
        <label>Short-Term Goal</label>
        <referenceTo>Short_Term_Goal__c</referenceTo>
        <relationshipName>Progress_Note_Goal_Junctions</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>ProgressNote ServiceAssignment mJO</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Progress_Note__c</columns>
        <columns>Short_Term_Goal__c</columns>
        <columns>Objective__c</columns>
        <columns>Intervention__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>PNG-{0000000000}</displayFormat>
        <label>Progress Note Objective Junction ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ProgressNote ServiceAssignment mJOs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Plans_Must_Match</fullName>
        <active>false</active>
        <description>The Plan selected when initially creating and saving a new Progress Note should be the same Plan belonging to the Short-Term Goals being targeted by this Progress Note.</description>
        <errorConditionFormula>Short_Term_Goal__r.Plan__c =  Progress_Note__r.Plan__c</errorConditionFormula>
        <errorDisplayField>Short_Term_Goal__c</errorDisplayField>
        <errorMessage>The Short-Term Goal you selected does not belong to the Plan you initially selected when creating this Progress Note. Please select a Short-Term Goal  from the Plan on your Progress Note OR go back to your Progress Note and edit the Plan.</errorMessage>
    </validationRules>
</CustomObject>